# xiaopengkernel

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  analysis_results.md  engine_output.txt  test_float.html  test_ifc.html  test_ifc_output.txt  test_output.txt  test_output_after.txt  test_zindex.html
.mimocode/: .cron-lock
.trae/documents/: CSS引擎Bug修复计划.md  cpp-dom-binding-enhancement-plan.md  fetch-api-implementation-plan.md  javascript_dom_api_binding_plan.md  project-maturity-analysis.md  render_tree_decoupling_plan.md
build_test/: test_layout
demo/: app.js  flexbox_demo.html  flexbox_integration.html  grid_demo.html  image_test.html  index.html  showcase.html  style.css
docs/: API.md
include/css/: computed_style.hpp  css_animation.hpp  css_parser.hpp  css_tokenizer.hpp  css_types.hpp  selector_engine.hpp  selector_enhancements.hpp  style_resolver.hpp
include/dom/: dom.hpp  event_system.hpp  html_parser.hpp  html_tokenizer.hpp  html_tree_builder.hpp  html_types.hpp
include/engine/: browser_engine.hpp  browsing_context.hpp  event_loop.hpp  minimal_demo.hpp  page_lifecycle.hpp  parse_task.hpp  parse_thread.hpp  resource_tree.hpp
include/gui/: canvas_2d.hpp
include/layout/: flexbox_algorithm.hpp  form_controls.hpp  grid_algorithm.hpp  hit_test.hpp  inline_formatting_context.hpp  layout_algorithm.hpp  layout_box.hpp  layout_tree_builder.hpp  line_box.hpp  stacking_context.hpp
include/loader/: cache.hpp  connection_pool.hpp  error.hpp  http_client.hpp  http_headers.hpp  http_message.hpp  loader.hpp  loader_all.hpp  resource.hpp  resource_handler.hpp  scheduler.hpp  security.hpp  types.hpp  url.hpp
include/network/: websocket.hpp
include/renderer/: bitmap_canvas.hpp  canvas.hpp  font_manager.hpp  gl_canvas.hpp  image.hpp  incremental_manager.hpp  opengl_canvas.hpp  opengl_context.hpp  paint_layer.hpp  painting_algorithm.hpp  render_tree.hpp  render_tree_builder.hpp  text_metrics.hpp  text_shaper.hpp
include/script/: auto_binding.hpp  console_binding.hpp  dom_binding.hpp  event_binding.hpp  fetch_api.hpp  fetch_binding.hpp  fetch_types.hpp  js_binding.hpp  promise_binding.hpp  promise_binding_simple.hpp  script_engine.hpp  timer_binding.hpp
include/window/: sdl_window.hpp  window.hpp
src/: demo_minimal_main.cpp  main.cpp  minimal_demo.cpp
src/css/: css_animation.cpp
src/engine/: browser_engine.cpp  browsing_context.cpp  event_loop.cpp  page_lifecycle.cpp
src/gui/: canvas_2d.cpp
src/network/: websocket.cpp
src/renderer/: bitmap_canvas.cpp  font_manager.cpp  form_controls.cpp  image.cpp  opengl_canvas.cpp  opengl_context.cpp  painting_algorithm.cpp  render_tree.cpp  render_tree_builder.cpp  simple_opengl_demo.cpp  text_shaper.cpp
src/script/: fetch_api.cpp  fetch_binding.cpp  promise_binding.cpp  promise_binding_simple.cpp  script_engine.cpp
src/window/: sdl_window.cpp
tests/: debug_flex.cpp  test_advanced_selector.cpp  test_bug_fixes.cpp  test_bug_fixes_simple.cpp  test_canvas_2d.cpp  test_css_animation.cpp  test_css_complete.cpp  test_css_parser.cpp  test_dom_binding.cpp  test_event.cpp  test_event_loop.cpp  test_fetch.cpp  test_flexbox.cpp  test_flexbox_advanced.cpp  test_framework.hpp  test_gpu_acceleration.cpp  test_grid.cpp  test_html_parser.cpp  test_ifc.cpp  test_incremental.cpp  test_layout.cpp  test_loader.cpp  test_opengl.cpp  test_page_lifecycle.cpp  test_parse_thread.cpp  test_phase2_selectors_stacking.cpp  test_positioning.cpp  test_quickjs_upgrade.cpp  test_renderer.cpp  test_resource_tree.cpp  test_stacking.cpp  test_style_resolver.cpp  test_web_api.cpp  test_websocket.cpp
